--- a/assignment1/seasons.css
+++ b/assignment1/seasons.css
@@ -1,3 +1,7 @@
+/*css needed for proper paper.js resizing;
+fix by user3337813, found at:
+http://stackoverflow.com/questions/28896260/paper-js-wont-resize-the-canvas-correctly
+*/
 html, body {
     margin: 0;
     overflow: hidden;
@@ -5,6 +9,12 @@ html, body {
     font-family: 'Noto Sans', sans-serif;
 }
 
-h1 {
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+    width: 100%;
+    height: 100%;
+}
+
+h3 {
 	text-align: center;
 }
